# osgpmeh

./: CMakeLists.txt  README.md
Scripts/: run_osgpmesh.bat
Sources/: CMakeLists.txt  main.cpp
Sources/include/: merge_geometry.h  mesh.h  pmesh.h  triangle.h  vec3.h  vertex.h
Sources/src/: merge_geometry.cpp  mesh.cpp  pmesh.cpp  triangle.cpp
