cmake_minimum_required(VERSION 3.0.0)
project(OSGPMESH VERSION 0.1.0 LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
if(MSVC)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
# add_definitions(OSG_DISABLE_MSVC_WARNINGS)
endif()

# add_definitions(-DBOOST_THREAD_USE_LIB)
set(OSGPMESH_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(OSGPMESH_SOURCES_DIR "${OSGPMESH_ROOT_DIR}/Sources")
set(OSGPMESH_BUILD_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build")
set(CMAKE_INSTALL_PREFIX "${OSGPMESH_BUILD_DIR}/bin")
set(BINARY_ROOT_DIR "${CMAKE_INSTALL_PREFIX}/")
set(THIRDPARTY_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty")
set(THIRDPARTY_OSG_ROOT_DIR "${THIRDPARTY_ROOT_DIR}/osg-3.6.4")
set(OSG_INC_PATH "${THIRDPARTY_OSG_ROOT_DIR}/include")
set(OSGPMESH_INC_PATH "${OSGPMESH_SOURCES_DIR}/include")
set(OSGPMESH_RESOURCES_ROOT_DIR "${OSGPMESH_ROOT_DIR}/Resources")
file(GLOB_RECURSE OSG_LIB "${THIRDPARTY_OSG_ROOT_DIR}/lib/*.lib")

add_subdirectory(Sources)
add_subdirectory(ThirdParty)
# message(${OSG_LIB})